# metadata-scraper

./: .gitignore  README.md  draft.py  pyproject.toml
app/: address_list.csv  authors_names_list.csv  complete_address_list.csv  draft.py  extract_params.py  find_emails.py  format_pmids.py  full_testing_address_list.csv  get_address.py  get_address_from_authors.py  get_addresses_from_author_data  get_addresses_from_author_data.py  get_authors_insts.py  get_google_scholar_authors.py  get_keywords.py  get_pmids_and_addresses.py  get_pmids_and_author_data.py  get_usa_addresses.py  google_emails.py  gscholar_extract_params.py  joined_authors_with_official_address_updated.csv  joined_official_address_authors.csv  main.py  match_emails.py  official_address_list.csv  official_usa_address_list.csv  process_address_tables.py  run_crossref_queries.py  run_pubmed_queries.py  run_pubmed_query.py  run_queries.py  split_table.py  split_tables.py  testing_list.csv  usa_address_list.csv  workable_journal_doi.csv
app/addresses_separate/: separate_addresses.py
app/archive/: add_full_names.py  extract_params.py  get_usa_addresses.py  run_crossref_queries.py  run_pubmed_queries.py  run_queries.py  verify_emails.py  view_pickles.py
app/data/: additional_papers.csv  hunter_ucla_emails.csv  official_full_name_usa_addresses.csv  relevant_papers.csv  ucla_contacts.csv  unique_author_names.csv  updated_full_name_usa_addresses.csv
app/outputs/: full_usa_address_list.csv  joined_authors_with_official_address.csv  joined_usa_address_authors.csv  leads_keywords.csv  official_address_list.csv  (+5 more)
(+138 files in other folders)
